--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //justified textView
+    implementation 'me.biubiubiu.justifytext:library:1.1'
+
 }
