--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/telemedlogo"
+        android:icon="@drawable/logo_hdpi"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/telemedlogo"
+        android:roundIcon="@drawable/logo_hdpi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.OrgUnitsActivity"></activity>
+        <activity android:name=".ui.NotesActivity"></activity>
+        <activity android:name=".ui.OrgUnitsActivity" />
         <activity android:name=".ui.ProgramStagesActivity" />
         <activity android:name=".ui.ProgramsActivity" />
         <activity android:name=".ui.DataElementsActivity" />
